[gd_scene load_steps=22 format=2]

[ext_resource path="res://Entities/enforcer/enforcer.gd" type="Script" id=1]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/brain/movement_lobe/spring/spring.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/brain/action_lobe/action/action.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/brain/action_lobe/action_lobe.tscn" type="PackedScene" id=12]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=13]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=15]
[ext_resource path="res://Entities/Item_Pickups/keyblaster/keyblaster.png" type="Texture" id=16]
[ext_resource path="res://Entities/enforcer/enforcer.png" type="Texture" id=17]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.2287
height = 6.69887

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.222222
loop = true
step = 0.111111
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.111111 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="enforcer" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 900
SLOWDOWN = 900
TOP_SPEED = 35
FORCE_MULT = 0.9
truName = "enforcer"
faction = "offworld"

[node name="stats" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 10
HEALTH = 10
DEFENCE = 1
DAMAGE = 0
poison_modifier = -99.0
burning_modifier = -99.0
bleed_modifier = -99.0
slowness_modifier = -99.0
regeneration_modifier = -99.0
resistance_modifier = -99.0
infection_modifier = -99.0

[node name="entity_sprite" parent="." instance=ExtResource( 6 )]
material = SubResource( 1 )
texture = ExtResource( 17 )
hframes = 2
auto_flip_mode = 2

[node name="entity_push" parent="." instance=ExtResource( 5 )]
visible = false
strength = 30

[node name="CollisionShape2D" parent="entity_push" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="hurtbox" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 3 )

[node name="sleeper" parent="." instance=ExtResource( 3 )]
visible = false

[node name="health_bar" parent="." instance=ExtResource( 7 )]
margin_left = -10.5484
margin_top = -13.8639
margin_right = 11.4516
margin_bottom = -9.8622

[node name="brain" parent="." instance=ExtResource( 8 )]

[node name="movement_lobe" parent="brain" instance=ExtResource( 9 )]
IDLE_TIME = 999.0
IDLE_OFFSET = 0.0
WANDER_TIME = 0.01
WANDER_OFFSET = 0.0
WANDER_SPEED = 0.0
WANDER_RANGE = 16.0
SMART_SLOWDOWN = false
EIGHT_WAY_MOVEMENT = true
MOVEMENT_EFFICIENCY = 20
general_springs = {
"friendly": "",
"hostile": "spring",
"neutral": ""
}

[node name="spring" parent="brain/movement_lobe" instance=ExtResource( 10 )]
DISTANCE = 80

[node name="action_lobe" parent="brain" instance=ExtResource( 12 )]
ACT_ON_ENEMY_SPOTTED = true
PATIENCE = 0.0
ACTION_WEIGHTING = 0.0
ACTION_DEWEIGHTING = 0.0

[node name="shoot" parent="brain/action_lobe" instance=ExtResource( 11 )]
best_distance = 50
COOLDOWN = 1.7
GLOBAL_COOLDOWN = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 4 )

[node name="foot_stepper" parent="." instance=ExtResource( 14 )]
CONSTANT_RATE = true
VOLUME_ADJUST = 0.0

[node name="entity_effects" parent="." instance=ExtResource( 13 )]
death_type = 3

[node name="held_item" parent="." instance=ExtResource( 15 )]
TARGETING = 1

[node name="sprite" parent="held_item/anchor" index="0"]
texture = ExtResource( 16 )

[connection signal="action" from="brain/action_lobe" to="." method="_on_action_lobe_action"]
[connection signal="animation_finished" from="held_item/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="entity_push"]
[editable path="hurtbox"]
[editable path="held_item"]
